[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.7"
env_logger = "0.9"
futures = "0.3.28"
futures-util = "0.3.28"
histogram = "0.6.9"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
prost-types = "0.11.8"
rand = "0.8.5"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "=1.14.13"
solana-metrics = "=1.14.13"
solana-sdk = "=1.14.13"
solana-transaction-status = "=1.14.13"
spl-memo = "3.0.1"
thiserror = "1.0.40"
tokio = "~1.14.1"
tonic = { version = "0.8.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }
