[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.19"
clap = { version = "4.1.1", features = ["derive", "env"] }
crossbeam-channel = "0.5.4"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
histogram = "0.6.9"
jito-protos = { path = "../jito_protos" }
log = "0.4.14"
prost-types = "0.8.0"
rand = "0.8.5"
searcher-service-client = { path = "../searcher_service_client" }
solana-client = "=1.11.2"
solana-metrics = "=1.11.2"
solana-sdk = "=1.11.2"
solana-transaction-status = "=1.11.2"
spl-memo = "3.0.1"
thiserror = "1.0.34"
tokio = "~1.14.1"
tonic = { version = "0.5.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
