[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.24"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.7"
env_logger = "0.10"
futures-util = "0.3.28"
histogram = "0.6.9"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
prost-types = "0.12"
rand = "0.8.5"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "=1.17.20"
solana-metrics = "=1.17.20"
solana-sdk = "=1.17.20"
solana-transaction-status = "=1.17.20"
spl-memo = "3.0.1"
thiserror = "1.0.40"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
