[package]
name = "jito-searcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status= "=2.1"
spl-memo = "5"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
base64 = "0.21.7"
bincode = "1.3.3"
