[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
chrono = "0.4.24"
futures = "0.3.28"
futures-util = "0.3.28"
jito-protos = { path = "../jito_protos" }
log = "0.4.17"
rand = "0.8.5"
prost-types = "0.11.8"
serde = "1.0.159"
solana-client = "=1.14.18"
solana-metrics = "=1.14.18"
solana-sdk = "=1.14.18"
solana-transaction-status = "=1.14.18"
thiserror = "1.0.40"
tokio = "~1.14.1"
tonic = "0.8.3"
