[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
futures-util = "0.3.28"
jito-protos = { path = "../jito_protos" }
log = "0.4"
prost-types = "0.12"
solana-client = "=2.1"
solana-metrics = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"
thiserror = "1.0.40"
tokio = "1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
