[package]
name = "searcher-service-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
chrono = "0.4.19"
jito-protos = { path = "../jito_protos" }
log = "0.4.14"
prost-types = "0.11.6"
serde = "1.0.130"
solana-metrics = "1.14.13"
solana-sdk = "1.14.13"
thiserror = "1.0.34"
tokio = "~1.14.1"
tonic = "0.8.3"
