[package]
name = "jito-backrun-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.19"
clap = { version = "3.1.12", features = ["derive", "env"] }
crossbeam-channel = "0.5.4"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
histogram = "0.6.9"
jito-protos = { path = "../../jito_protos" }
log = "0.4.14"
prost-types = "0.8.0"
rand = "0.8.5"
jito-searcher-client = { path = "../searcher_client" }
solana-client = "=1.14.13"
solana-metrics = "=1.14.13"
solana-sdk = "=1.14.13"
solana-transaction-status = "=1.14.13"
spl-memo = "3.0.1"
thiserror = "1.0.34"
tokio = "~1.14.1"
tonic = { version = "0.5.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
